--- a/index.html
+++ b/index.html
@@ -4,11 +4,30 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Css starter</title>
+  <title>Cofferoasters</title>
   <link rel="stylesheet" href="/Css/normalize.css">
   <link rel="stylesheet" href="/Css/styles.css">
+  <!-- Fonts -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <header class="site-header">
+      <div class="container site-header__container">
+        <a  class="site-header__logo" href="index.html">
+          <img class="site-header__img" src="/img/cofferoaster.svg" alt="logo">
+        </a>
+        <nav class="sitenav">
+            <ul class="sitenav__list">
+              <li class="sitenav__item"><a  class="sitenav__link"  href="#">home</a></li>
+              <li class="sitenav__item"><a  class="sitenav__link"  href="#">about us</a></li>
+              <li class="sitenav__item"><a  class="sitenav__link"  href="#">create your plane</a></li>
+            </ul>
+          </nav>
+        
+      </div>
+    </header>
   <script src="/js/main.js"></script>
 </body>
 </html>
